--- a/main.html
+++ b/main.html
@@ -820,7 +820,7 @@
 
                                 <span class="custom-checkbox"></span>
 
-                                <p class="checkbox__text checkbox__text--modal">Я согласен на обработку персональных данных</p>
+                                <span class="checkbox__text checkbox__text--modal">Я согласен на обработку персональных данных</span>
 
                             </label>
 
@@ -902,7 +902,7 @@
 
                         <img src="img/base/phone-icon.svg" alt="">
 
-                        <a href="tel:8 800 00 00 000">8 800 00 00 000</a>
+                        <a href="tel:88000000000">8 800 00 00 000</a>
 
                     </div>
 
