--- a/complex.html
+++ b/complex.html
@@ -211,7 +211,7 @@
                         <div class="about-complex__item">
 
                             <a data-fancybox="gallery" href="video/reviews-video.mp4">
-                                <img src="video/reviews-preview.png" />
+                                <img src="video/reviews-preview.png" alt="">
                             </a>
 
                         </div>
@@ -219,7 +219,7 @@
                         <div class="about-complex__item">
 
                             <a data-fancybox="gallery" href="video/reviews-video.mp4">
-                                <img src="video/reviews-preview.png" />
+                                <img src="video/reviews-preview.png" alt="">
                             </a>
 
                         </div>
@@ -227,7 +227,7 @@
                         <div class="about-complex__item">
 
                             <a data-fancybox="gallery" href="video/reviews-video.mp4">
-                                <img src="video/reviews-preview.png" />
+                                <img src="video/reviews-preview.png" alt="">
                             </a>
 
                         </div>
@@ -235,7 +235,7 @@
                         <div class="about-complex__item">
 
                             <a data-fancybox="gallery" href="video/reviews-video.mp4">
-                                <img src="video/reviews-preview.png" />
+                                <img src="video/reviews-preview.png" alt="">
                             </a>
 
                         </div>
@@ -446,7 +446,7 @@
 
                                     <span class="custom-checkbox"></span>
 
-                                    <p class="checkbox__text">Я согласен на обработку персональных данных</p>
+                                    <span class="checkbox__text">Я согласен на обработку персональных данных</span>
 
                                 </label>
 
@@ -1966,7 +1966,7 @@
 
                                     <span class="custom-checkbox"></span>
 
-                                    <p class="checkbox__text">Я согласен на обработку персональных данных</p>
+                                    <span class="checkbox__text">Я согласен на обработку персональных данных</span>
 
                                 </label>
 
@@ -2262,7 +2262,7 @@
 
                                     <span class="custom-checkbox"></span>
 
-                                    <p class="checkbox__text">Я согласен на обработку персональных данных</p>
+                                    <span class="checkbox__text">Я согласен на обработку персональных данных</span>
 
                                 </label>
 
@@ -2308,7 +2308,7 @@
 
                                 <span class="custom-checkbox"></span>
 
-                                <p class="checkbox__text checkbox__text--modal">Я согласен на обработку персональных данных</p>
+                                <span class="checkbox__text checkbox__text--modal">Я согласен на обработку персональных данных</span>
 
                             </label>
 
@@ -2390,7 +2390,7 @@
 
                         <img src="img/base/phone-icon.svg" alt="">
 
-                        <a href="tel:8 800 00 00 000">8 800 00 00 000</a>
+                        <a href="tel:88000000000">8 800 00 00 000</a>
 
                     </div>
 
