--- a/about.html
+++ b/about.html
@@ -236,7 +236,7 @@
                         <div class="reviews__item" >
 
                             <a data-fancybox="gallery" href="video/reviews-video.mp4">
-                                <img src="video/reviews-preview.png" />
+                                <img src="video/reviews-preview.png" alt="">
                             </a>
 
                         </div>  
@@ -244,7 +244,7 @@
                         <div class="reviews__item" >
 
                             <a data-fancybox="gallery" href="video/reviews-video.mp4">
-                                <img src="video/reviews-preview.png" />
+                                <img src="video/reviews-preview.png" alt="">
                             </a>
 
                         </div>
@@ -252,7 +252,7 @@
                         <div class="reviews__item" >
                     
                             <a data-fancybox="gallery" href="video/reviews-video.mp4">
-                                <img src="video/reviews-preview.png">
+                                <img src="video/reviews-preview.png" alt="">
                             </a>
 
                         </div>
@@ -260,7 +260,7 @@
                         <div class="reviews__item" >
 
                             <a data-fancybox="gallery" href="video/reviews-video.mp4">
-                                <img src="video/reviews-preview.png" />
+                                <img src="video/reviews-preview.png" alt="">
                             </a>
 
                         </div>
@@ -433,7 +433,7 @@
 
                         <img src="img/base/phone-icon.svg" alt="">
 
-                        <a href="tel:8 800 00 00 000">8 800 00 00 000</a>
+                        <a href="tel:88000000000">8 800 00 00 000</a>
 
                     </div>
 
