--- a/map.html
+++ b/map.html
@@ -264,7 +264,7 @@
 
                         <img src="img/base/phone-icon.svg" alt="">
 
-                        <a href="tel:8 800 00 00 000">8 800 00 00 000</a>
+                        <a href="tel:88000000000">8 800 00 00 000</a>
 
                     </div>
 
